[test-utils] fix tag name in yarnrc

--- a/packages/test-utils/.yarnrc
+++ b/packages/test-utils/.yarnrc
@@ -1,2 +1,2 @@
-version-tag-prefix: '@applitools/scripts@'
-version-git-message: '@applitools/scripts@%s'
+version-tag-prefix: '@applitools/test-utils@'
+version-git-message: '@applitools/test-utils@%s'
