--- a/packages/eyes-nightwatch/package.json
+++ b/packages/eyes-nightwatch/package.json
@@ -55,7 +55,9 @@
     "test:it:headless:w3c": "yarn nightwatch test/it/spec-driver-headless-desktop.spec.js --env firefox",
     "test:it:headed": "yarn nightwatch --env firefox test/it/spec-driver-onscreen-desktop.spec.js",
     "test:it:mobile": "yarn nightwatch test/it/spec-driver-mobile.spec.js",
-    "test:e2e": "yarn nightwatch --eyes-config applitools.config.js test/e2e/*.spec.js",
+    "test:e2e": "yarn test:e2e:nightwatch && yarn test:e2e:cucumber",
+    "test:e2e:cucumber": "cucumber-js test/e2e/cucumber/features/*.feature --require test/e2e/cucumber/cucumber.config.js --require test/e2e/cucumber/step_definitions",
+    "test:e2e:nightwatch": "yarn nightwatch --eyes-config applitools.config.js test/e2e/*.spec.js",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-nightwatch' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-nightwatch'",
     "setup": "yarn docker:setup",
@@ -74,22 +76,23 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.0.3",
-    "@applitools/eyes-sdk-core": "12.20.0",
+    "@applitools/eyes-api": "1.0.5",
+    "@applitools/eyes-sdk-core": "12.21.1",
     "@applitools/utils": "1.2.0",
-    "@applitools/visual-grid-client": "15.8.7"
+    "@applitools/visual-grid-client": "15.8.11"
   },
   "devDependencies": {
-    "@applitools/api-extractor": "1.1.1",
-    "@applitools/scripts": "1.0.0",
+    "@applitools/api-extractor": "1.1.2",
+    "@applitools/scripts": "1.0.1",
     "@applitools/sdk-coverage-tests": "2.3.13",
     "@applitools/sdk-release-kit": "0.13.0",
     "@applitools/sdk-shared": "0.9.3",
-    "@applitools/test-utils": "1.0.3",
+    "@applitools/test-utils": "1.0.4",
     "@types/nightwatch": "^1.3.3",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "chromedriver": "^86.0.0",
+    "cucumber": "6.0.5",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
@@ -99,6 +102,7 @@
     "husky": "^4.3.8",
     "mocha": "^8.0.1",
     "nightwatch": "1.3.4",
+    "nightwatch-api": "^3.0.2",
     "nock": "^12.0.3",
     "prettier": "^2.1.2",
     "spec-xunit-file": "0.0.1-3"
