--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -7,6 +7,9 @@ inputs:
   version:
     description: version type (patch, major, minor)
     required: true
+  skip-npm:
+    description: should the package be published in npm
+    default: false
 outputs:
   tag:
     description: name of the tag pushed after publishing
@@ -17,13 +20,19 @@ runs:
     - name: Configure NPM
       shell: bash
       run: |
+        echo "::group::Configure NPM"
+
         echo "//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
         echo "registry=https://registry.npmjs.org/" >> .npmrc
         echo "always-auth=true" >> .npmrc
+
+        echo "::endgroup::"
     - name: Configure Git
       id: git
       shell: bash
       run: |
+        echo "::group::Configure Git"
+
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
 
@@ -32,23 +41,26 @@ runs:
         git push -u origin $BRANCH
 
         echo "::set-output name=branch::$BRANCH"
+
+        echo "::endgroup::"
     - name: Publish ${{inputs.package}}
       id: publish
       shell: bash
       run: |
-        cd "packages/${{inputs.package}}"
-        git status
-        yarn install
-        git status
-        npm run deps --if-present
-        git status
-        yarn publish "--${{inputs.version}}" --access public
-        git status
+        echo "::group::Publish ${{inputs.package}}"
 
+        cd "packages/${{inputs.package}}"
+        yarn install
+        npm run deps --if-present
+        if [ "${{inputs.npm}}" = false ]; then yarn publish "--${{inputs.version}}"; else yarn version "--${{inputs.version}}"; fi
         echo "::set-output name=tag::$(git describe --tags --abbrev=0)"
+
+        echo "::endgroup::"
     - name: Merge publish branch into ${{github.ref}}
       shell: bash
       run: |
+        echo "::group::Merge publish branch into ${{github.ref}}"
+
         GH_REF=${{github.ref}}
         CURRENT_BRANCH=${GH_REF#refs/heads/}
 
@@ -57,3 +69,5 @@ runs:
         git pull origin $CURRENT_BRANCH --rebase
         git merge ${{steps.git.outputs.branch}}
         git push origin $CURRENT_BRANCH
+
+        echo "::endgroup::"
