--- a/packages/eyes-playwright-universal/package.json
+++ b/packages/eyes-playwright-universal/package.json
@@ -38,8 +38,8 @@
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-playwright' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-playwright-universal'",
     "deps": "echo 'bongo deps'",
-    "gh:test": "gh workflow run test.yml -f packages='playwright-universal' -f links='eyes-sdk-core eyes-api utils types sdk-shared visual-grid-client eyes-universal' -f linking-depth='2'",
-    "gh:publish": "gh workflow run publish.yml -f packages='playwright-universal'",
+    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='playwright-universal' -f links='eyes-sdk-core eyes-api utils types sdk-shared visual-grid-client eyes-universal' -f linking-depth='2'",
+    "gh:publish": "gh workflow run publish.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='playwright-universal'",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
     "postversion": "bongo postversion"
