--- a/packages/eyes-selenium-universal/package.json
+++ b/packages/eyes-selenium-universal/package.json
@@ -40,8 +40,8 @@
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
     "deps": "echo 'bongo deps'",
-    "gh:test": "gh workflow run test.yml -f packages='selenium-universal' -f links='eyes-sdk-core eyes-api utils types sdk-shared visual-grid-client eyes-universal' -f linking-depth='2'",
-    "gh:publish": "gh workflow run publish.yml -f packages='selenium-universal'",
+    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='selenium-universal' -f links='eyes-sdk-core eyes-api utils types sdk-shared visual-grid-client eyes-universal' -f linking-depth='2'",
+    "gh:publish": "gh workflow run publish.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='selenium-universal'",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
     "postversion": "bongo postversion"
