--- a/packages/eyes-storybook/package.json
+++ b/packages/eyes-storybook/package.json
@@ -36,7 +36,7 @@
     "preversion": "bongo preversion && yarn test",
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification",
-    "deps": "bongo deps",
+    "deps": "echo 'change back to bongo deps'",
     "prepublish:setup": "echo 'setup is a no-op. Move along, nothing to see here.'"
   },
   "keywords": [
