--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -80,3 +80,4 @@ jobs:
           path: |
             packages/${{matrix.package}}/coverage-tests-metadata.json
             packages/${{matrix.package}}/coverage-test-report.xml
+            packages/${{matrix.package}}/test/e2e/snapshots/*.json
