--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -95,7 +95,7 @@
     "mocha": "^8.0.1",
     "ncp": "^2.0.0",
     "prettier": "^2.1.2",
-    "selenium-webdriver": "^4.0.0-alpha.7",
+    "selenium-webdriver": "^4.0.0-beta.4",
     "spec-xunit-file": "0.0.1-3",
     "typescript": "^4.1.3"
   },
