chore(eyes-storybook): upgrade puppeteer (#670)
* chore: upgrading puppeteer to latest

* chore: fix version

* fix: waitFor -> waitForTimeout

* chore: add waitFor

* chore: add waitFor

* chore: testing stdout level

* chore: export stdout level

* chore: export stdout level

* chore: debugging test

* chore: export stdout level

* chore: add STDOUT_LEVEL to test script

* chore: add STDOUT_LEVEL to test script

* debug: snapshots

* chore: remove STDOUT_LEVEL from e2e script

* chore: adding new snapshots

* chore: remove save artifacts

* chore: changelog

* chore: update README

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,7 @@ env:
   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
   AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
   DISPLAY: ':99'
+  STDOUT_LEVEL: 1
 jobs:
   setup:
     name: Setup
