--- a/.github/actions/publish/action.yml
+++ b/.github/actions/publish/action.yml
@@ -56,6 +56,8 @@ runs:
         echo "::set-output name=tag::$(git describe --tags --abbrev=0)"
 
         echo "::endgroup::"
+      env:
+        STDOUT_LEVEL: '1'
     - name: Merge publish branch into ${{github.ref}}
       shell: bash
       run: |
