add execution grid mode to test wf

--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -6,6 +6,9 @@ inputs:
     required: true
   type:
     description: type of the testing (unit, it, e2e, coverage)
+  remote:
+    description: remote type (local, eg)
+    default: local
   install:
     description: names of packages to install before testing
   links:
@@ -23,6 +26,7 @@ runs:
   steps:
     - shell: bash
       env:
+        CVG_TESTS_REMOTE: ${{inputs.remote == 'eg' && secrets.CVG_TESTS_EG_REMOTE || 'http://localhost:4444/wd/hub'}}
         MOCHA_GREP: ${{inputs.grep}}
       run: |
         echo "::group::Configure NPM"
