--- a/.github/actions/tests/action.yml
+++ b/.github/actions/tests/action.yml
@@ -26,7 +26,7 @@ runs:
   steps:
     - shell: bash
       env:
-        CVG_TESTS_REMOTE: 'http://localhost:4444/wd/hub'
+        APPLITOOLS_TEST_REMOTE: ${{inputs.remote}}
         MOCHA_GREP: ${{inputs.grep}}
       run: |
         echo "::group::Configure NPM"
