--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,11 +25,6 @@ on:
         description: grep pattern
         required: false
 env:
-  APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
-  APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
-  APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
-  SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
-  SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
   NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
   AZURE_STORAGE_CONNECTION_STRING: ${{secrets.AZURE_STORAGE_CONNECTION_STRING}}
   DISPLAY: ':99'
@@ -53,8 +48,9 @@ jobs:
       matrix: 
         include: ${{fromJSON(needs.setup.outputs.packages)}}
       fail-fast: false
-    name: ${{matrix.displayName}}
     runs-on: ubuntu-latest
+    name: ${{matrix.displayName}}
+    env: ${{matrix.env}}
     steps:
       - name: Check-out repository
         uses: actions/checkout@v2
@@ -76,7 +72,14 @@ jobs:
           links: ${{github.event.inputs.links}}
           linking-depth: ${{github.event.inputs['linking-depth']}}
           grep: ${{github.event.inputs.grep}}
-        env: ${{matrix.env}}
+        env:
+          CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
+          CVG_TESTS_EG_REMOTE: ${{secret.CVG_TESTS_EG_REMOTE}}
+          APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
+          APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
+          APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
+          SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
+          SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
       - name: Save testing artifacts
         uses: actions/upload-artifact@v2
         with:
