--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -74,7 +74,7 @@ jobs:
           grep: ${{github.event.inputs.grep}}
         env:
           CVG_TESTS_REMOTE: http://localhost:4444/wd/hub
-          CVG_TESTS_EG_REMOTE: ${{secret.CVG_TESTS_EG_REMOTE}}
+          CVG_TESTS_EG_REMOTE: ${{secrets.CVG_TESTS_EG_REMOTE}}
           APPLITOOLS_API_KEY: ${{secrets.APPLITOOLS_API_KEY}}
           APPLITOOLS_API_KEY_SDK: ${{secrets.APPLITOOLS_API_KEY_SDK}}
           APPLITOOLS_API_KEY_READ: ${{secrets.APPLITOOLS_API_KEY_READ}}
