--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -47,7 +47,7 @@
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-globals WebdriverIO Applitools",
     "generate:tests": "coverage-tests generate https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes.webdriverio.javascript5'",
     "test": "yarn build:tsconfig && yarn build:dist && yarn test:it && yarn test:service && yarn test:coverage",
-    "test:it": "mocha --no-timeouts \"test/it/*.js\"",
+    "test:it": "mocha --exit --no-timeouts -r ts-node/register ./test/it/*.ts",
     "test:service": "mocha ./test/service/unit/*.spec.js && wdio \"test/service/wdio.conf.js\" && wdio \"test/service/no-config/wdio.no-config.conf.js\" && wdio \"test/service/vg/wdio.vg.conf.js\"",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-webdriverio-5' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "test:coverage:wd": "APPLITOOLS_WEBDRIVERIO_PROTOCOL=wd yarn test:coverage",
@@ -82,6 +82,7 @@
     "@applitools/sdk-release-kit": "^0.13.2",
     "@applitools/sdk-shared": "0.9.5",
     "@applitools/test-utils": "1.0.7",
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "@wdio/cli": "5.18.6",
@@ -103,7 +104,7 @@
     "prettier": "^2.1.2",
     "shared-examples-for": "^0.1.3",
     "spec-xunit-file": "0.0.1-3",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.2.1",
     "tsconfig.js": "^3.0.0",
     "typescript": "^4.1.5",
     "webdriverio": "^7.5.2"
