--- a/packages/eyes-playwright/tsconfig.json
+++ b/packages/eyes-playwright/tsconfig.json
@@ -13,6 +13,7 @@
     "stripInternal": true,
     "experimentalDecorators": false,
     "resolveJsonModule": true,
+    "esModuleInterop": true
   },
-  "include": ["./src/**/*"]
+  "exclude" : ["test/**/*.spec.ts", "types/**/*"],
 }
