--- a/packages/eyes-puppeteer/package.json
+++ b/packages/eyes-puppeteer/package.json
@@ -43,9 +43,9 @@
     "build:dist": "tsc",
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-modules puppeteer",
     "generate:tests": "coverage-tests generate https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-puppeteer'",
-    "test": "yarn build:dist && yarn test:it && yarn test:coverage",
-    "test:it": "mocha --exit --no-timeouts ./test/it/*.spec.js",
-    "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --exit --config .mocharc.cvg.js",
+    "test": "yarn test:it && yarn test:coverage",
+    "test:it": "mocha --exit --no-timeouts -r ts-node/register ./test/it/*.spec.ts",
+    "test:coverage": "yarn build:dist && yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-puppeteer' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --exit --config .mocharc.cvg.js",
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-puppeteer'",
     "docker:build": "docker build -t applitools/puppeteer-chrome .",
     "docker:rebuild": "docker build --no-cache -t applitools/puppeteer-chrome .",
@@ -75,6 +75,7 @@
     "@applitools/sdk-release-kit": "0.13.0",
     "@applitools/sdk-shared": "0.9.5",
     "@applitools/test-utils": "1.0.7",
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
     "eslint": "^7.9.0",
@@ -86,7 +87,8 @@
     "mocha": "^8.0.1",
     "prettier": "^2.1.2",
     "puppeteer": "^9.0.0",
-    "spec-xunit-file": "0.0.1-3"
+    "spec-xunit-file": "0.0.1-3",
+    "ts-node": "^10.2.1"
   },
   "peerDependencies": {
     "puppeteer": ">=5.3.0"
