Implement deep selectors for all frameworks (#683)
* Implement deep selectors for all frameworks
* add support of framework's shadow selectors
* add support of frame selectors
* add find element within an element suport for all frameworks
* add transformSelector as a spec driver method
* refactor "it" tests in wdio, pptr, and playwright packages to run without compilation of src

--- a/packages/driver/tsconfig.json
+++ b/packages/driver/tsconfig.json
@@ -6,16 +6,19 @@
     "declaration": true,
     "declarationMap": false,
     "sourceMap": false,
+    "allowJs": true,
 
-    "target": "ES2017",
     "module": "commonjs",
+    "target": "es2017",
     "noImplicitAny": true,
-    "removeComments": false,
     "preserveConstEnums": true,
     "downlevelIteration": true,
+    "esModuleInterop": true,
     "stripInternal": false,
-    "experimentalDecorators": true,
-    "esModuleInterop": true
+    "removeComments": false,
   },
-  "exclude" : ["test/**/*.spec.ts", "types/**/*"],
+  "ts-node": {
+    "transpileOnly": true
+  },
+  "exclude" : ["dist", "types", "test"],
 }
