--- a/packages/eyes-api/tsconfig.json
+++ b/packages/eyes-api/tsconfig.json
@@ -7,15 +7,17 @@
     "declarationMap": false,
     "sourceMap": false,
 
-    "target": "ES2017",
     "module": "commonjs",
+    "target": "es2017",
     "noImplicitAny": true,
-    "removeComments": false,
     "preserveConstEnums": true,
     "downlevelIteration": true,
+    "esModuleInterop": true,
     "stripInternal": false,
-    "experimentalDecorators": true,
-    "esModuleInterop": true
+    "removeComments": false,
   },
-  "exclude" : ["test/**/*.spec.ts", "types/**/*"],
+  "ts-node": {
+    "transpileOnly": true
+  },
+  "exclude" : ["dist", "types", "test"],
 }
