--- a/packages/eyes-universal/tsconfig.json
+++ b/packages/eyes-universal/tsconfig.json
@@ -2,18 +2,19 @@
   "compilerOptions": {
     "rootDir": "src",
     "outDir": "dist",
-    "sourceMap": true,
+    "sourceMap": false,
 
-    "target": "ES2017",
     "module": "commonjs",
+    "target": "es2017",
     "noImplicitAny": true,
-    "removeComments": true,
     "preserveConstEnums": true,
     "downlevelIteration": true,
-    "stripInternal": true,
-    "experimentalDecorators": false,
-    "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "stripInternal": false,
+    "removeComments": false,
   },
-  "include": ["./src/**/*"]
+  "ts-node": {
+    "transpileOnly": true
+  },
+  "exclude" : ["dist", "types", "test"],
 }
