--- a/packages/eyes-selenium-universal/package.json
+++ b/packages/eyes-selenium-universal/package.json
@@ -47,20 +47,20 @@
     "postversion": "bongo postversion"
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.1.1",
-    "@applitools/eyes-universal": "file:../eyes-universal",
-    "@applitools/types": "1.0.13",
-    "@applitools/utils": "1.2.0",
-    "chalk": "^4.1.0",
+    "@applitools/eyes-api": "1.1.2",
+    "@applitools/eyes-universal": "0.1.4",
+    "@applitools/types": "1.0.14",
+    "@applitools/utils": "1.2.3",
+    "chalk": "4.1.0",
     "ws": "7.4.0"
   },
   "devDependencies": {
-    "@applitools/api-extractor": "1.1.1",
-    "@applitools/scripts": "1.0.0",
-    "@applitools/sdk-coverage-tests": "2.3.13",
-    "@applitools/sdk-release-kit": "0.13.0",
-    "@applitools/sdk-shared": "0.9.3",
-    "@applitools/test-utils": "1.0.3",
+    "@applitools/api-extractor": "1.1.3",
+    "@applitools/scripts": "1.0.1",
+    "@applitools/sdk-coverage-tests": "2.3.15",
+    "@applitools/sdk-release-kit": "0.13.3",
+    "@applitools/sdk-shared": "0.9.6",
+    "@applitools/test-utils": "1.0.7",
     "@types/selenium-webdriver": "^4.0.11",
     "@types/ws": "^7.4.4",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
