--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -38,9 +38,11 @@
   ],
   "scripts": {
     "lint": "eslint '**/*.ts'",
-    "build": "yarn build:dist && yarn build:bin",
+    "build": "yarn build:dist && yarn build:bin && yarn build:zip && yarn build:tgz",
     "build:dist": "tsc",
-    "build:bin": "pkg ./dist/cli.js --out-path ./bin --compress GZip --targets node14-linux-x64,node14-macos-x64,node14-win-x64",
+    "build:bin": "pkg ./dist/cli.js --out-path ./bin --compress GZip --targets node14-linux-x64,node14-macos-x64,node14-win-x64 && mv ./bin/cli-macos ./bin/eyes-universal-macos && mv ./bin/cli-linux ./bin/eyes-universal-linux && mv ./bin/cli-win.exe ./bin/eyes-universal-win.exe",
+    "build:zip": "zip -j ./bin/eyes-universal.zip ./bin/eyes-universal-linux ./bin/eyes-universal-macos ./bin/eyes-universal-win.exe",
+    "build:tgz": "tar -czf ./bin/eyes-universal.tar.gz -C ./bin ./eyes-universal-linux ./eyes-universal-macos ./eyes-universal-win.exe",
     "deps": "bongo deps",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
@@ -48,6 +50,7 @@
   },
   "dependencies": {
     "@applitools/eyes-sdk-core": "12.23.7",
+    "@applitools/logger": "^1.0.4",
     "@applitools/utils": "1.2.3",
     "@applitools/visual-grid-client": "15.8.27",
     "webdriver": "7.7.3",
@@ -69,7 +72,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "mocha": "^9.0.0",
-    "pkg": "^5.0.0",
+    "pkg": "^5.3.2",
     "prettier": "^2.1.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
