--- a/packages/eyes-universal/package.json
+++ b/packages/eyes-universal/package.json
@@ -50,7 +50,7 @@
   },
   "dependencies": {
     "@applitools/eyes-sdk-core": "12.23.7",
-    "@applitools/logger": "^1.0.4",
+    "@applitools/logger": "1.0.4",
     "@applitools/utils": "1.2.3",
     "@applitools/visual-grid-client": "15.8.27",
     "webdriver": "7.7.3",
