--- a/packages/eyes-browser-extension/package.json
+++ b/packages/eyes-browser-extension/package.json
@@ -13,7 +13,7 @@
     "build": "yarn build:dist && yarn build:zip",
     "build:dist": "webpack",
     "build:zip": "cd dist; zip -r eyes-browser-extension.zip *; mv eyes-browser-extension.zip ../",
-    "generate:tests": "coverage-tests generate ./test/coverage/config.js --name 'eyes-testcafe'",
+    "generate:tests": "coverage-tests generate ./test/coverage/config.js --name 'eyes-browser-extension'",
     "test": "yarn build && yarn test:it && yarn test:coverage",
     "test:it": "mocha --no-timeouts --exit ./test/it/*.spec.js",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-browser-extension' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
@@ -57,7 +57,7 @@
     "mocha": "^8.3.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
-    "playwright": "^1.12.2",
+    "playwright": "^1.15.0",
     "prettier": "^2.3.2",
     "process": "^0.11.10",
     "selenium-webdriver": "^4.0.0-beta.4",
