[driver] fix issue with fractional viewport size on mobile devices

--- a/packages/driver/package.json
+++ b/packages/driver/package.json
@@ -29,6 +29,10 @@
     "lib": "./src",
     "test": "./test"
   },
+  "files": [
+    "dist",
+    "types"
+  ],
   "scripts": {
     "lint": "eslint '**/*.ts' '**/*.js'",
     "build": "tsc",
