--- a/packages/eyes-sdk-core/package.json
+++ b/packages/eyes-sdk-core/package.json
@@ -41,7 +41,7 @@
     "@applitools/screenshoter": "3.2.5",
     "@applitools/snippets": "2.1.7",
     "@applitools/types": "1.0.14",
-    "@applitools/utils": "1.2.3",
+    "@applitools/utils": "^1.2.3",
     "axios": "0.21.4",
     "chalk": "3.0.0",
     "cosmiconfig": "6.0.0",
@@ -54,6 +54,8 @@
   "devDependencies": {
     "@applitools/sdk-fake-eyes-server": "2.1.1",
     "@applitools/sdk-release-kit": "0.13.3",
+    "@applitools/spec-driver-selenium": "1.0.1",
+    "@applitools/test-utils": "1.0.7",
     "@applitools/visual-grid-client": "15.8.32",
     "assert-rejects": "1.0.0",
     "chai": "4.2.0",
@@ -67,7 +69,8 @@
     "ncp": "^2.0.0",
     "nock": "^13.0.4",
     "png-async": "^0.9.4",
-    "prettier": "1.19.0"
+    "prettier": "1.19.0",
+    "selenium-webdriver": "^4.0.0-rc-2"
   },
   "browser": {
     "tunnel": false
@@ -77,6 +80,7 @@
     "test": "mocha --no-timeouts --parallel --jobs 15 \"test/**/*.spec.js\"",
     "test:unit": "mocha --no-timeouts \"test/unit/**/*.spec.js\"",
     "test:it": "mocha --no-timeouts \"test/it/**/*.spec.js\"",
+    "test:e2e": "mocha --no-timeouts \"test/e2e/**/*.spec.js\"",
     "deps": "bongo deps",
     "preversion": "bongo preversion --skip-verify-installed-versions",
     "version": "bongo version",
