--- a/packages/eyes-selenium/package.json
+++ b/packages/eyes-selenium/package.json
@@ -42,21 +42,19 @@
     "types"
   ],
   "scripts": {
-    "lint": "eslint '**/*.ts' '**/*.js'",
+    "lint": "eslint '**/*.ts'",
     "build": "yarn build:dist && yarn build:types",
-    "doc": "typedoc ./types/index.d.ts --theme minimal --tsconfig ./tsconfig.doc.json",
     "build:dist": "tsc",
     "build:types": "api-extractor ./src/index.ts --out ./types/index.d.ts --external-modules selenium-webdriver",
     "generate:tests": "coverage-tests generate https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-selenium'",
-    "test": "yarn build:dist && yarn test:it && yarn test:coverage",
-    "test:it": "mocha --no-timeouts './test/it/**/*.spec.js'",
+    "test": "yarn test:coverage",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-selenium'",
     "setup": "yarn docker:setup",
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
     "deps": "bongo deps",
-    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='selenium selenium@3' -f links='eyes-sdk-core eyes-api types test-utils utils driver snippets screenshoter sdk-shared visual-grid-client' -f linking-depth=3",
+    "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='selenium selenium@3' -f links='types test-utils sdk-shared eyes-sdk-core visual-grid-client eyes-api spec-driver-selenium utils driver snippets screenshoter' -f linking-depth=3",
     "gh:publish": "gh workflow run publish.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='selenium'",
     "preversion": "bongo preversion && yarn build",
     "version": "bongo version",
@@ -70,7 +68,7 @@
   "dependencies": {
     "@applitools/eyes-api": "1.1.3",
     "@applitools/eyes-sdk-core": "12.23.14",
-    "@applitools/utils": "1.2.3",
+    "@applitools/spec-driver-selenium": "1.0.1",
     "@applitools/visual-grid-client": "15.8.33"
   },
   "devDependencies": {
@@ -90,10 +88,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^4.3.8",
-    "mocha": "^8.0.1",
-    "ncp": "^2.0.0",
+    "mocha": "^9.1.2",
     "prettier": "^2.1.2",
-    "selenium-webdriver": "^4.0.0-beta.4",
+    "selenium-webdriver": "^4.0.0-rc-2",
     "spec-xunit-file": "0.0.1-3",
     "typescript": "^4.1.3"
   },
